--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,5 +78,8 @@
         "variant": "cpp",
         "hash_map": "cpp"
     },
-    "C_Cpp.errorSquiggles": "Disabled"
+    "C_Cpp.errorSquiggles": "Disabled",
+    "python.linting.banditEnabled": false,
+    "python.linting.pylintEnabled": true,
+    "python.linting.enabled": true
 }
